--- a/public/index.html
+++ b/public/index.html
@@ -145,10 +145,7 @@
 
             <div class="table-container" id="soldItemsAnalysisContainer" style="display: none;">
                 <h3>📊 Sold Items Analysis</h3>
-                <div class="analysis-controls">
-                    <button id="toggleSoldItemsAnalysis" class="btn btn-secondary">Show Detailed Analysis</button>
-                </div>
-                <div id="soldItemsAnalysisContent" style="display: none;">
+                <div id="soldItemsAnalysisContent">
                     <div class="analysis-summary">
                         <div class="summary-stats">
                             <div class="summary-stat">
