- fix categories overview stats - fix recently sold items prices on all categories view

--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,18 @@
                 </div>
             </div>
 
-            <div class="stat-card">
+            <div class="stat-card" id="categoryOverviewCard" style="display: none;">
+                <h3 id="categoryOverviewTitle">📂 Category Overview</h3>
+                <div id="categoryOverviewGrid">
+                    <div class="categories-grid">
+                        Loading...
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="categories-overview-section" id="categoriesOverviewSection">
+            <div class="stat-card full-width">
                 <h3>📂 Categories Overview</h3>
                 <div id="categoriesOverview">
                     <div class="categories-grid">
